[gd_scene load_steps=20 format=3 uid="uid://crmshmhby6akr"]

[ext_resource type="Script" path="res://World Scene/characters/CharacterMain.gd" id="1_cyksq"]
[ext_resource type="Texture2D" uid="uid://cx4x10n8bkq2" path="res://Assets/Custom/Base_Frog.png" id="2_gfnm3"]
[ext_resource type="AudioStream" uid="uid://5jxvmdhelg28" path="res://Assets/Sounds/Fantozzi-SandL1.ogg" id="3_ai8dy"]
[ext_resource type="PackedScene" uid="uid://dyge3pmntuk1g" path="res://World Scene/UIs/Inventory.tscn" id="4_2u5re"]
[ext_resource type="Texture2D" uid="uid://1yvco4rj8fh5" path="res://Assets/Custom/temp_mc_icon.png" id="5_0yiti"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tlpdi"]
atlas = ExtResource("2_gfnm3")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_soayp"]
atlas = ExtResource("2_gfnm3")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckgcc"]
atlas = ExtResource("2_gfnm3")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_518sj"]
atlas = ExtResource("2_gfnm3")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5lm3"]
atlas = ExtResource("2_gfnm3")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eegt7"]
atlas = ExtResource("2_gfnm3")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf5r7"]
atlas = ExtResource("2_gfnm3")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_07n72"]
atlas = ExtResource("2_gfnm3")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gytb2"]
atlas = ExtResource("2_gfnm3")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqpda"]
atlas = ExtResource("2_gfnm3")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5yim"]
atlas = ExtResource("2_gfnm3")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6wij"]
atlas = ExtResource("2_gfnm3")
region = Rect2(0, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_u76tt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlpdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soayp")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckgcc")
}],
"loop": true,
"name": &"Down_Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_518sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5lm3")
}],
"loop": true,
"name": &"Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eegt7")
}],
"loop": true,
"name": &"Left_Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf5r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07n72")
}],
"loop": true,
"name": &"Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gytb2")
}],
"loop": true,
"name": &"Right_Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqpda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5yim")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6wij")
}],
"loop": true,
"name": &"Up_Idle",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iirhq"]
size = Vector2(28, 23)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_cyksq")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(3.8147e-06, 0)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_u76tt")
animation = &"Down_Idle"
autoplay = "Down_Idle"
frame_progress = 0.624731

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_iirhq")

[node name="Camera2D" type="Camera2D" parent="."]
texture_filter = 1
zoom = Vector2(1.3, 1.3)
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="FootstepAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ai8dy")
volume_db = -8.433
bus = &"sfx"

[node name="Inventory Layer" type="CanvasLayer" parent="."]
layer = 4
visible = false

[node name="Inventory" parent="Inventory Layer" instance=ExtResource("4_2u5re")]

[node name="MapIcon" type="TextureRect" parent="."]
visible = false
z_index = 999
y_sort_enabled = true
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_0yiti")

[connection signal="finished" from="FootstepAudio" to="." method="_on_footstep_audio_finished"]
